exports[`createRequest has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "KJKAGrQdeyJHPdlPxNjh8SqI1pXaVio2VxKPrhFlD3Zi1gnuESuolE8qujpSmPv27-Zzcmq9HVO2cHJmiJVeOw",
}
`;

exports[`createRequest has correct payload in JWT for a request 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "pyIcJ0rH-oK0eWsQTmu_Xqb62suQPKnxUsVwhK1Z--BVDRsoLEfdwUx9M-Z6bMuCuKVb5jCOBZ_maC8XULPW_A",
}
`;

exports[`createRequest has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signature": "OZcIkiJKn7lGoCoiEyw5sT_P5RRQo3aKxiqgi-W6ARF0InFxkfSWiYpupPlkr3BjBGQd-tkfVpejbfSGTWPQtQ",
}
`;

exports[`createRequest has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "iat": 1485321133996,
    "iss": "0x001122",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "gkhIJelI8jjg3jTQmXBO4ZCE5M07_Qy1bQWid8M-45_MRrmesBmTeQPUiNPKIxtU7eZUrdahlnsrDCRa7pCPxA",
}
`;

exports[`createRequest has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "callback": "https://myserver.com",
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "iat": 1485321133996,
    "iss": "0x001122",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signature": "J0Hl4zD4r4hktxmMArt8pTlnrl3A4YVO6qthP5AiD_gRixzkwAHiCnKtT4QXYwxmmA0HBIhzdIpMPSfgTvBe3A",
}
`;

exports[`createRequest ignores unsupported request parameters 1`] = `
Object {
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "iat": 1485321133996,
    "iss": "0x001122",
    "type": "shareReq",
  },
  "signature": "KJKAGrQdeyJHPdlPxNjh8SqI1pXaVio2VxKPrhFlD3Zi1gnuESuolE8qujpSmPv27-Zzcmq9HVO2cHJmiJVeOw",
}
`;

exports[`receive returns profile mixing public and private claims 1`] = `
Object {
  "credentials": Object {
    "address": "0x001122",
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "name": "Davie",
    "phone": "+15555551234",
    "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  },
}
`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "credentials": Object {
    "address": "0x001122",
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "name": "Davie",
    "phone": "+15555551234",
    "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
    "verified": Array [
      Object {
        "claim": Object {
          "email": "bingbangbung@email.com",
        },
        "exp": 1485321134996,
        "iat": 1485321133996,
        "iss": "0x001122",
        "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJzdWIiOiIweDExMjIzMyIsImNsYWltIjp7ImVtYWlsIjoiYmluZ2JhbmdidW5nQGVtYWlsLmNvbSJ9LCJleHAiOjE0ODUzMjExMzQ5OTYsImlzcyI6IjB4MDAxMTIyIiwiaWF0IjoxNDg1MzIxMTMzOTk2fQ.-mEzVMPYnzqFhOr0O7fs71-dWAacnllVyOdWQY0zh2ZdIt7-30IYTewds4tGlkLmMky-Y1ZjRmIsxmM7xvAgxg",
        "sub": "0x112233",
      },
    ],
  },
}
`;

exports[`receive returns profile with only public claims 1`] = `
Object {
  "credentials": Object {
    "address": "0x001122",
    "challenge": "db2ad7a398dfdd897f5b7ebac6e5995d482a824917c8251cfe30c86926510fa8.6d98e4827b8912cf4b061d0d16ac68577b6e0632ff2a4ce89ed70c537334f0ac",
    "name": "David Chaum",
    "publicKey": "03fdd57adec3d438ea237fe46b33ee1e016eda6b585c3e27ea66686c2ea5358479",
  },
}
`;
